Definisco le aree con CSS

--- a/index.html
+++ b/index.html
@@ -4,21 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Boolzapp</title>
 </head>
 <body>
     
+    <!-- Inizio container -->
     <div class="container" id="app">
 
 
+        <!-- MENU' DI SINISTRA -->
+        <div class="left-container">
+
+            <!-- Barra superiore -->
+            <div class="top-bar border-right">
+
+            </div>
+            <!-- Fine barra superiore -->
+
+            <!-- Notifiche -->
+            <div class="notifications">
+
+            </div>
+            <!-- Fine area notifiche -->
+
+            <!-- Area ricerca -->
+            <div class="research">
+                <input type="text" placeholder="Cerca o inizia una nuova chat">
+            </div>
+            <!-- Fine area notifiche -->
+
+            <!-- Area contatti -->
+            <div class="contacts-list">
+
+            </div>
+            <!-- Fine area contatti -->
+        </div>
+        <!-- FINE MENU' DI SINISTRA -->
 
 
+        <!-- MENU' DI DESTRA -->
+        <div class="right-container">
 
+            <!-- Barra superiore -->
+            <div class="top-bar">
 
+            </div>
+            <!-- Fine barra superiore -->
 
+            <!-- Area messaggi -->
+            <div class="box-messages">
+
+            </div>
+            <!-- Fine area messaggi -->
+
+            <!-- Menù chat -->
+            <div class="chat-text">
+
+            </div>
+            <!-- Fine menù chat -->
+
+        </div>
+        <!-- FINE MENU' DI DESTRA -->
+
+        
     </div>
-
+    <!-- Fine container -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
