--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             
             <!-- AREA LISTA CONTATTI -->
             <div class="contacts-list">
-
+                                <!--Aggiungo classe active se corrisponde ad index-->                       <!--Aggiungo contactTracker al click--><!--Mostra se cotact è uguale a visible: true-->
                 <div class="contact" :class="(active == index) ? 'active' : ''" v-for="(contact, index) in contacts" @click="contactTracker(index)" v-show="contact.visible">
                     <img class="avatar" v-bind:src="'img/avatar' + contact.avatar + '.jpg'"  alt="avatar + 'contact.avatar'">
                     <div class="side-text">
@@ -122,9 +122,9 @@
             <div class="area-messages">
 
                 <div class="box-message">
-                         <!-- -->                                                               <!-- Se status in messaggio è uguale a sent allora aggiungi classe sent, se no aggiungi classe received -->
-                    <div v-for="(message, index) in contacts[active].messages" class="message message-text" v-bind:class="message.status == 'sent' ? 'sent' : 'received'">
-                        <p>{{message.text}}</p>
+                        <!-- Ciclo message in contatti in posizione active di messagges -->    <!-- Se status in messaggio è uguale a sent allora aggiungi classe sent, se no aggiungi classe received -->
+                    <div v-for="(message, index) in contacts[active].messages" class="message" v-bind:class="message.status == 'sent' ? 'sent' : 'received'">
+                        <p class="message-text">{{message.text}}</p>
                         <p class="date-text">{{message.date}}</p>
                     </div>
 
